<resources>
    <string name="app_name">Rock Paper Scissors</string>
    <string name="title_kertas">Kertas</string>
    <string name="title_gunting">Gunting</string>
    <string name="title_batu">Batu</string>
    <string name="title_pemain1">Pemain 1</string>
    <string name="title_CPU">CPU</string>
    <string name="vs">VS</string>
    <string name="title_pilih_lawanmu">PILIH LAWANMU</string>
    <string name="title_ervin_vs_pemain">Ervin vs Pemain</string>
    <string name="title_ervin_vs_cpu">Ervin vs CPU</string>

    <style name="MenuTextAppearance">
        <item name="android:fontFamily">@font/qarmic_sans</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:textStyle">bold</item>
    </style>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_landing1">Bermain suit melawan sesama pemain</string>
    <string name="text_landing2">Bermain suit melawan komputer</string>
    <string name="text_landing3">Tuliskan namamu di bawah</string>
</resources>