<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_kertas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/qarmic_sans"
        android:text="@string/title_kertas"
        android:textSize="25sp"
        android:rotation="-20"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/yellow"/>

    <TextView
        android:id="@+id/text_gunting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-20"
        android:text="@string/title_gunting"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/qarmic_sans"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_kertas"
        android:textColor="@color/green"/>

    <TextView
        android:id="@+id/text_batu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_batu"
        android:rotation="-20"
        android:textSize="25sp"
        android:fontFamily="@font/qarmic_sans"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_gunting"
        android:textColor="@color/pink"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/text_pemainOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/qarmic_sans"
        android:text="@string/title_pemain1"
        android:layout_marginStart="10dp"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame_batu"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/text_pemainOne"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:clickable="true">
        <ImageView
            android:id="@+id/image_batu"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/batu"
            android:layout_gravity="center"
            android:clickable="true"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_kertas"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/frame_batu"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:clickable="true">
        <ImageView
            android:id="@+id/image_kertas"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/kertas"
            android:layout_gravity="center"
            android:clickable="true"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_gunting"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/frame_kertas"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        android:clickable="true">
        <ImageView
            android:id="@+id/image_gunting"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/gunting"
            android:layout_gravity="center"
            android:clickable="true"/>
    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>