<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AgainstPlayer">

    <TextView
        android:id="@+id/text_kertas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/qarmic_sans"
        android:rotation="-20"
        android:text="@string/title_kertas"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_gunting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/qarmic_sans"
        android:rotation="-20"
        android:text="@string/title_gunting"
        android:textColor="@color/green"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_kertas" />

    <TextView
        android:id="@+id/text_batu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/qarmic_sans"
        android:rotation="-20"
        android:text="@string/title_batu"
        android:textColor="@color/pink"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_gunting" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_baseline_cancel"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/text_pemainOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/qarmic_sans"
        android:text="@string/title_pemain1"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_batu"
        android:layout_marginTop="10dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:background="@color/white"
        android:src="@drawable/batu"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_pemainOne"/>


    <ImageButton
        android:id="@+id/btn_kertas"
        android:layout_marginTop="10dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/kertas"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_batu"/>


    <ImageButton
        android:id="@+id/btn_gunting"
        android:layout_marginTop="10dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/gunting"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_kertas"/>

    <TextView
        android:id="@+id/text_pemainTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/qarmic_sans"
        android:layout_marginEnd="15dp"
        android:text="Pemain 2"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_batuCom"
        android:layout_marginTop="10dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/batu"
        android:layout_marginEnd="35dp"
        app:layout_constraintTop_toBottomOf="@id/text_pemainTwo"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/btn_kertasCom"
        android:layout_marginTop="10dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/kertas"
        android:layout_marginEnd="35dp"
        app:layout_constraintTop_toBottomOf="@id/btn_batuCom"
        app:layout_constraintRight_toRightOf="parent"/>


    <ImageButton
        android:id="@+id/btn_guntingCom"
        android:layout_marginTop="10dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:scaleType="fitCenter"
        android:src="@drawable/gunting"
        android:layout_marginEnd="35dp"
        app:layout_constraintTop_toBottomOf="@id/btn_kertasCom"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/btn_refresh"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/refresh"
        android:scaleType="fitCenter"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_versus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/qarmic_sans"
        android:text="@string/vs"
        android:textColor="@color/light_red"
        android:textSize="50sp"
        android:textStyle="bold"
        android:rotation="-20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>